# agri_auditor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dvc.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: skills-first.instructions.md
.github/workflows/: ci.yml
docs/: cto_upgrade_completion_handoff.md  intelligence_roadmap.md
schemas/: run_metadata.schema.json
scripts/: benchmark_gemini.py  build_events.py  build_features.py  build_report.py  check_perf_budget.py  prepare_test_data.py  test_load.py
scripts/__pycache__/: test_load.cpython-313-pytest-8.3.4.pyc.21636
src/agri_auditor/: __init__.py  cli.py  config.py  features.py  ingestion.py  intelligence.py  logging_config.py  mlops.py  reporting.py
src/agri_auditor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agri_auditor/__pycache__/: __init__.cpython-313.pyc.2102525077920  ingestion.cpython-313.pyc.1564952335472  ingestion.cpython-313.pyc.2770525328496
tests/: conftest.py  test_cli.py  test_config_logging.py  test_docker_artifacts.py  test_features.py  test_ingestion.py  test_intelligence.py  test_mlops.py  test_perf_budget.py  test_reporting.py  test_run_metadata_schema.py
tests/__pycache__/: test_ingestion.cpython-313-pytest-8.3.4.pyc.15800
tests/integration/: test_gemini_live.py
