[project]
name = "agri-auditor"
version = "0.1.0"
description = "Step 1 ingestion scaffold for autonomous incident auditing."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.2.2",
    "pillow>=11.1.0",
    "scipy>=1.15.1",
    "google-genai>=1.2.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.18.0",
    "jinja2>=3.1.0",
    "structlog>=24.4.0",
]

[project.scripts]
agri-auditor = "agri_auditor.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.3.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider -m \"not gemini_live\""
markers = [
    "gemini_live: tests that require a live GEMINI_API_KEY and network access",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
